Delete button replaced by a menu
TODO: change accessSiteList

--- a/extension/public/manage.html
+++ b/extension/public/manage.html
@@ -12,6 +12,18 @@
 
     </div>
 
+
+    <div id="menuContainer" hidden="true">
+        <ul>
+            <li>
+                <button id="deleteButton" class="menuOption"><strong class="redText">Delete</strong></button>
+            </li>
+            <li>
+                <button class="menuOption"><strong>Edit authorized sites</strong></button>
+            </li>
+        </ul>
+    </div>
+
 	<script src="manage.js"></script>
 </body>
 
