Better UI for adding site access

--- a/extension/public/manage.html
+++ b/extension/public/manage.html
@@ -24,14 +24,17 @@
         </ul>
     </div>
 
-    <div id="manageAccessContainer" hidden="true">
-        <form id="siteForm">
-            <input type="text" id="siteInput" required>
-            <input type="submit" value="Add">
-        </form>
-        <ul id="siteList">
+    <div id="myModal" class="modal">
+        <div id="manageAccessContainer" class="modal-content">
+            <span id="close-modal" class="close">&times;</span>
+            <form id="siteForm">
+                <input type="text" id="siteInput" required>
+                <input type="submit" value="Add">
+            </form>
+            <ul id="siteList">
 
-        </ul>
+            </ul>
+        </div>
     </div>
 
 	<script src="manage.js"></script>
