Input for adding a site now only accepts URLs, and resets after submitting one.

--- a/extension/public/manage.html
+++ b/extension/public/manage.html
@@ -28,7 +28,7 @@
         <div id="manageAccessContainer" class="modal-content">
             <span id="close-modal" class="close">&times;</span>
             <form id="siteForm">
-                <input type="text" id="siteInput" required>
+                <input type="url" id="siteInput" placeholder="https://www.linkedin.com" required>
                 <input type="submit" value="Add">
             </form>
             <ul id="siteList">
